added post-paste clarification message to proxmox clipboard
Helps to differentiate hypervisors like proxmox where pasting copies the text to the virtual machine's clipboard,
as opposed to writing the text to the user's cursor inside the vm.

--- a/projects/topomojo-mks/src/app/console/console.component.html
+++ b/projects/topomojo-mks/src/app/console/console.component.html
@@ -140,6 +140,10 @@
         </button>
       </div>
 
+      <div *ngIf="consoleSupportsFeatures?.pasteToClipboard && justPasted">
+        <p class="text-success text-center">Text copied to virtual machine's clipboard.</p>
+      </div>
+
       <textarea class="form-control" placeholder="Clipboard" rows="20" [(ngModel)]="cliptext"></textarea>
     </div>
   </div>
