--- a/projects/topomojo-work/src/app/utility/vm-controller/vm-controller.component.html
+++ b/projects/topomojo-work/src/app/utility/vm-controller/vm-controller.component.html
@@ -4,63 +4,55 @@
 <div *ngIf="vm$ | async; else refresh">
 
   <div *ngIf="!!task">
-    <fa-icon [icon]="faCircleNotch" [spin]="true"></fa-icon>
+    <fa-icon [icon]="faCircleNotch" animation="spin"></fa-icon>
     <span *ngIf="vm.task && vm.task.progress">&nbsp;{{vm.task.progress}}%</span>
     {{task}}
   </div>
 
   <div *ngIf="!task && !confirming" class="btn-group btn-group-sm" role="group" aria-label="vm control buttons">
 
-    <button class="btn btn-outline-dark" (click)="do('refresh')"
-    aria-label="refresh" tooltip="refresh">
+    <button class="btn btn-outline-dark" (click)="do('refresh')" aria-label="refresh" tooltip="refresh">
       <fa-icon [icon]="faSyncAlt"></fa-icon>
     </button>
 
-    <button class="btn btn-outline-dark" (click)="do('initialize')"
-    aria-label="initialize" tooltip="initialize"
-    *ngIf="vm.status === 'created'">
+    <button class="btn btn-outline-dark" (click)="do('initialize')" aria-label="initialize" tooltip="initialize"
+      *ngIf="vm.status === 'created'">
       <fa-icon [icon]="faCog"></fa-icon>
     </button>
 
-    <button class="btn btn-outline-dark" (click)="do('deploy')"
-    aria-label="deploy" tooltip="deploy"
-    *ngIf="vm.status === 'initialized'">
+    <button class="btn btn-outline-dark" (click)="do('deploy')" aria-label="deploy" tooltip="deploy"
+      *ngIf="vm.status === 'initialized'">
       <fa-icon [icon]="faBolt"></fa-icon>
     </button>
 
     <ng-container *ngIf="!!vm.id">
 
-      <button class="btn btn-outline-dark" (click)="console()"
-      aria-label="console" tooltip="console">
+      <button class="btn btn-outline-dark" (click)="console()" aria-label="console" tooltip="console">
         <fa-icon [icon]="faTv"></fa-icon>
       </button>
 
-      <button class="btn btn-outline-dark" (click)="do('start')"
-      aria-label="start" tooltip="start"
-      *ngIf="vm.id && vm.state !== 'running'">
+      <button class="btn btn-outline-dark" (click)="do('start')" aria-label="start" tooltip="start"
+        *ngIf="vm.id && vm.state !== 'running'">
         <fa-icon [icon]="faPlay"></fa-icon>
       </button>
 
-      <button class="btn btn-outline-dark" (click)="do('stop')"
-      aria-label="stop" tooltip="stop"
-      *ngIf="vm.id && vm.state === 'running'">
+      <button class="btn btn-outline-dark" (click)="do('stop')" aria-label="stop" tooltip="stop"
+        *ngIf="vm.id && vm.state === 'running'">
         <fa-icon [icon]="faStop"></fa-icon>
       </button>
 
-      <button class="btn btn-outline-dark" (click)="do('save')"
-      aria-label="save" tooltip="save"
-      *ngIf="template.id && !template.isLinked">
+      <button class="btn btn-outline-dark" (click)="do('save')" aria-label="save" tooltip="save"
+        *ngIf="template.id && !template.isLinked">
         <fa-icon [icon]="faSave"></fa-icon>
       </button>
 
-      <button class="btn btn-outline-dark" (click)="confirm('revert')"
-      aria-label="revert" tooltip="revert"
-      *ngIf="vm.id && vm.hypervisorType === 'vsphere'">
+      <button class="btn btn-outline-dark" (click)="confirm('revert')" aria-label="revert" tooltip="revert"
+        *ngIf="vm.id && vm.hypervisorType === 'vsphere'">
         <fa-icon [icon]="faStepBackward"></fa-icon>
       </button>
 
-      <button *ngIf="!hideDelete" class="btn btn-outline-dark" (click)="confirm('delete')"
-      aria-label="delete" tooltip="delete">
+      <button *ngIf="!hideDelete" class="btn btn-outline-dark" (click)="confirm('delete')" aria-label="delete"
+        tooltip="delete">
         <fa-icon [icon]="faTrash"></fa-icon>
       </button>
 
@@ -70,13 +62,12 @@
   <div *ngIf="confirming" class="btn-group" role="group" aria-label="confirm buttons">
     <span class="mr-2">{{confirmation_task}}?</span>
     <button class="btn btn-outline-dark btn-sm" (click)="do(confirmation_task);confirming=false"
-    aria-label="confirm action" [tooltip]="'confirm '+confirmation_task">
+      aria-label="confirm action" [tooltip]="'confirm '+confirmation_task">
       <fa-icon [icon]="faCheck"></fa-icon>
     </button>
-    <button class="btn btn-outline-dark btn-sm" (click)="confirming=false"
-      aria-label="cancel delete" tooltip="cancel">
-        <fa-icon [icon]="faTimes"></fa-icon>
-      </button>
+    <button class="btn btn-outline-dark btn-sm" (click)="confirming=false" aria-label="cancel delete" tooltip="cancel">
+      <fa-icon [icon]="faTimes"></fa-icon>
+    </button>
   </div>
 
   <app-error-div [errors]="errors" class="text-left"></app-error-div>
@@ -84,7 +75,7 @@
 
 <ng-template #refresh>
   <div>
-    <fa-icon [icon]="faCircleNotch" [spin]="true"></fa-icon>
+    <fa-icon [icon]="faCircleNotch" animation="spin"></fa-icon>
     <span class="ml-1">load</span>
   </div>
 </ng-template>
