--- a/projects/topomojo-work/src/styles.scss
+++ b/projects/topomojo-work/src/styles.scss
@@ -43,7 +43,7 @@ $theme-colors: (
 // @import "../../../node_modules/bootstrap/scss/list-group";
 @import "../../../node_modules/bootstrap/scss/close";
 // @import "../../../node_modules/bootstrap/scss/toasts";
-// @import "../../../node_modules/bootstrap/scss/modal";
+@import "../../../node_modules/bootstrap/scss/modal";
 @import "../../../node_modules/bootstrap/scss/tooltip";
 // @import "../../../node_modules/bootstrap/scss/popover";
 // @import "../../../node_modules/bootstrap/scss/carousel";
@@ -119,6 +119,9 @@ h5 {
 }
 .alert {
   margin-bottom: 0.25rem !important;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 app-spinner svg {
   rect,
