--- a/projects/topomojo-mks/src/styles.scss
+++ b/projects/topomojo-mks/src/styles.scss
@@ -14,7 +14,8 @@ $bg-tools: #545;
 body {
   background-color: $dark;
   color: $light;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 18px;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -105,7 +106,8 @@ button:hover {
   }
 }
 app-spinner {
-  svg path, svg rect {
+  svg path,
+  svg rect {
     fill: $dim;
   }
 }
@@ -118,12 +120,12 @@ app-spinner {
   color: $light;
 }
 textarea {
-    background-color: $gray-200;
-    color: $gray-800;
+  background-color: $gray-200;
+  color: $gray-800;
 }
 textarea:focus {
-    background-color: $gray-200;
-    color: $gray-800;
+  background-color: $gray-200;
+  color: $gray-800;
 }
 input.form-check-input {
   background-color: $gray-200;
@@ -136,4 +138,7 @@ input.form-check-input {
 }
 .text-light {
   color: $light;
+}
+.text-primary {
+  color: $primary;
 }
