--- a/projects/topomojo-work/src/app/admin/dashboard/dashboard.component.html
+++ b/projects/topomojo-work/src/app/admin/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
   <small>
     Initiate cleanup on the server.  Cleanup generally runs on a schedule,
     but can be fired manually here. It uses the settings specified at the
-    api application. (TODO: allow changing settings here.)
+    api application.
   </small>
 </p>
 <div class="input">
