--- a/projects/topomojo-work/src/app/app-layout/app-layout.component.html
+++ b/projects/topomojo-work/src/app/app-layout/app-layout.component.html
@@ -86,8 +86,10 @@
 <main
   [class.sidebar-offset-out]="user && pinned && open"
   [class.sidebar-offset-in]="user && (!pinned || !open)">
-    <div class="container-fluid">
-        <router-outlet></router-outlet>
+    <div class="tm-page-shell">
+        <div class="container-fluid tm-page-card">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </main>
 
