--- a/projects/topomojo-work/src/app/admin/admin/admin.component.html
+++ b/projects/topomojo-work/src/app/admin/admin/admin.component.html
@@ -14,6 +14,7 @@
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/templates']">Templates</a>
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/machines']">Machines</a>
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/users']">Users</a>
+    <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/settings']">Settings</a>
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/log']">Log</a>
   </div>
 
@@ -24,6 +25,7 @@
     <app-template-browser *ngSwitchCase="'templates'"></app-template-browser>
     <app-vm-browser *ngSwitchCase="'machines'"></app-vm-browser>
     <app-user-browser *ngSwitchCase="'users'"></app-user-browser>
+    <app-setting-browser *ngSwitchCase="'settings'"></app-setting-browser>
     <app-log-viewer *ngSwitchCase="'log'"></app-log-viewer>
   </div>
 </div>
