--- a/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.scss
+++ b/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.scss
@@ -24,3 +24,11 @@
   font-size: 0.95rem;
   padding-top: 0.25rem;
 }
+
+.favorite-on {
+  color: #ffc107;
+}
+
+.favorite-off {
+  color: #6c757d;
+}
