--- a/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
@@ -45,30 +45,108 @@
 <app-pager [skip]="skip" [take]="take" [count]="count" (changed)="paged($event)"></app-pager>
 <hr class="my-0" [class]="!fullAdminView ? 'mt-2' : ''"/>
 
-<div *ngFor="let g of source$ | async; trackBy:trackById" class="row mb-1">
-  <div class="col-1" *ngIf="fullAdminView">
+<div class="row mb-2 workspace-header align-items-center">
+  <div class="col-1" *ngIf="fullAdminView"></div>
+
+  <div class="col-2">
+    <button
+      type="button"
+      class="btn btn-link p-0 sort-header header-label text-primary d-inline-flex align-items-center"
+      (click)="sortBy('id')"
+    >
+      ID
+      <fa-icon
+        *ngIf="sortField === 'id'"
+        [icon]="sortAscending ? faSortUp : faSortDown">
+      </fa-icon>
+    </button>
+  </div>
+
+  <div class="col-2">
+    <button
+      type="button"
+      class="btn btn-link p-0 sort-header header-label text-primary d-inline-flex align-items-center"
+      (click)="sortBy('session')"
+    >
+      Time Left
+      <fa-icon
+        *ngIf="sortField === 'session'"
+        [icon]="sortAscending ? faSortUp : faSortDown">
+      </fa-icon>
+    </button>
+  </div>
+
+  <div [ngClass]="fullAdminView ? 'col-4' : 'col-5'">
+    <button
+      type="button"
+      class="btn btn-link p-0 sort-header header-label text-primary d-inline-flex align-items-center"
+      (click)="sortBy('managerWorkspace')"
+    >
+      Manager / Workspace
+      <fa-icon
+        *ngIf="sortField === 'managerWorkspace'"
+        [icon]="sortAscending ? faSortUp : faSortDown">
+      </fa-icon>
+    </button>
+  </div>
+
+  <div class="col-3 d-flex justify-content-end">
+    <span class="header-label text-primary">Actions</span>
+  </div>
+</div>
+
+<div *ngFor="let g of source$ | async; trackBy:trackById" class="row mb-1 workspace-row">
+  <div class="col-1 d-flex align-items-center tm-select-col" *ngIf="fullAdminView">
     <button class="btn btn-light btn-sm" (click)="toggle(g)">
       <fa-icon [icon]="g.checked ? faChecked : faUnChecked"></fa-icon>
     </button>
+    <button
+      *ngIf="filter === 'active' && canFavorite(g)"
+      type="button"
+      class="btn btn-link btn-sm p-0 tm-action-btn"
+      (click)="toggleGamespaceFavorite(g, $event)"
+      [attr.aria-label]="isGamespaceFavorite(g.id) ? 'Unfavorite gamespace' : 'Favorite gamespace'"
+      [attr.title]="isGamespaceFavorite(g.id) ? 'Unfavorite' : 'Favorite'">
+      <fa-icon
+        [icon]="isGamespaceFavorite(g.id) ? faStarSolid : faStarRegular"
+        [ngClass]="isGamespaceFavorite(g.id) ? 'favorite-on' : 'favorite-off'">
+      </fa-icon>
+    </button>
   </div>
-  <div class="col-3">
-    <small class="px-1" [class.pop-success]="!g.gameOver" [class.pop-dark]="g.gameOver">{{g.id | slice:0:8}}</small>&nbsp;
-    <small>{{g.session.countdown | countdown}}</small>
+
+  <div class="col-2">
+    <small class="px-1" [class.pop-success]="!g.gameOver" [class.pop-dark]="g.gameOver">
+      {{ g.id | slice:0:8 }}
+    </small>
   </div>
-  <div [class]="fullAdminView ? 'col-5' : 'col-6'">
-    <span>{{g.managerName}}</span>
-    <small> &mdash; {{g.name}}</small>
+
+  <div class="col-2">
+    <small>{{ g.session.countdown | countdown }}</small>
   </div>
-  <div class="col-3 d-flex justify-content-end">
-    <button class="btn btn-outline-info btn-sm mx-1" (click)="view(g)">
+
+  <div [ngClass]="fullAdminView ? 'col-4' : 'col-5'">
+    <span>{{ g.managerName }}</span>
+    <small> &mdash; {{ g.name }}</small>
+  </div>
+
+  <div class="col-3 tm-actions-col">
+  <div class="tm-actions-grid">
+    <button class="btn btn-outline-info btn-sm tm-action-btn tm-action-fixed" (click)="view(g)">
       <fa-icon [icon]="faList"></fa-icon>
       <span>View</span>
     </button>
-    <app-confirm-button *ngIf="fullAdminView" btnClass="btn btn-outline-danger btn-sm" (confirm)="delete(g)">
+
+    <app-confirm-button
+      *ngIf="fullAdminView"
+      class="tm-action-host tm-action-fixed"
+      btnClass="btn btn-outline-danger btn-sm tm-action-btn tm-action-fixed"
+      (confirm)="delete(g)">
       <fa-icon [icon]="faTrash"></fa-icon>
       <span>Delete</span>
     </app-confirm-button>
   </div>
+</div>
+
   <div *ngIf="viewed === g" class="col-12">
     <ng-container *ngIf="view$ | async as view">
       <div *ngFor="let vm of view.v" class="row mb-1 align-items-center">
