--- a/projects/topomojo-work/src/app/workspace-card/workspace-card.component.html
+++ b/projects/topomojo-work/src/app/workspace-card/workspace-card.component.html
@@ -3,7 +3,21 @@
 
 <div class="card shadow-sm mb-2" routerLinkActive="pop-success" #rla="routerLinkActive" tabindex="0" (click)="go()" (keydown)="keydown($event)">
   <div class="card-body" [class.pop-info]="hovering && !rla.isActive" (mouseenter)="hovering=true" (mouseleave)="hovering=false">
-    <div class="card-title">{{workspace.name}}</div>
+    <div class="d-flex align-items-center">
+      <button
+        *ngIf="isFavorite || hovering || rla.isActive"
+        type="button"
+        class="btn btn-link p-0 mr-2 favorite-btn"
+        (click)="onToggleFavorite($event)"
+        [attr.aria-label]="isFavorite ? 'Unfavorite workspace' : 'Favorite workspace'"
+        [attr.title]="isFavorite ? 'Unfavorite' : 'Favorite'">
+        <fa-icon
+          [icon]="isFavorite ? faStarSolid : faStarRegular"
+          [ngClass]="isFavorite ? 'favorite-on' : 'favorite-off'">
+        </fa-icon>
+      </button>
+      <div class="card-title mb-0">{{ workspace.name }}</div>
+    </div>
     <div [hidden]="!(hovering || rla.isActive)">
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'settings']">Settings</a>
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'templates']">Templates</a>
